--- a/styles.css
+++ b/styles.css
@@ -12,16 +12,11 @@ body {
 
 html {
     font-size: 20px;
-
-    @media (min-width: 38em) {
-        font-size: 16px;
-    }
 }
 
 body {
     background-color: #222;
     color: #eee;
-    font-size: 16px;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
 }
@@ -37,20 +32,19 @@ header {
 }
 
 h1 {
-    font-size: 100px;
+    
     text-align: center;
     margin: 0;
     letter-spacing: -.25rem;
 
-    @media (max-width: 25em) {
-        font-size: 50px;
+    @media (max-width: 28em) {
+        font-size: 3rem;
     }
-    @media (min-width: 25em) {
-        font-size: 130px;
+    @media (min-width: 28em) {
+        font-size: 4rem;
     }
-
-    @media (min-width: 82em) {
-        font-size: 130px;
+    @media (min-width: 48em) {
+        font-size: 5rem;
     }
 }
 
