--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,20 @@ body {
 }
 
 .container {
-    width: 80%;
-    margin-left: 10%;
+    width: 70%;
+    margin-left: 15%;
     margin-bottom: 5%;
 }
 
 header {
     margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+header img {
+    width: 50%;
+    margin: 0 auto;
 }
 
 h1 {
@@ -64,13 +71,7 @@ nav a:last-of-type {
     margin: 0;
 }
 
-.rubik-80s-fade-regular {
-    font-family: "Rubik 80s Fade", system-ui;
-    font-weight: 400;
-    font-style: normal;
-}
-
-img {
+.band {
     width: 100%;
     display: block;
 }
