--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,19 @@ header {
     margin: 20px 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 header img {
-    width: 50%;
     margin: 0 auto;
+
+    @media (max-width: 48em) {
+        width: 75%;
+    }
+
+    @media (min-width: 48em) {
+        width: 50%;
+    }
 }
 
 h1 {
